Correct opacity in about us & stretch background image on views

--- a/src/main/resources/static/sass/components/_about.scss
+++ b/src/main/resources/static/sass/components/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  background-color: rgba($color-white, .8);
+  background-color: rgba($color-white, .9);
   font-size: 1.5rem;
   padding: 2.5rem;
   text-align: center;
@@ -12,7 +12,7 @@
   }
 
   &__project {
-    background-color: rgba($color-white, .8);
+    background-color: rgba($color-white, .9);
     font-size: 1.5rem;
     padding: 2.5rem;
     text-align: center;
