--- a/src/main/resources/static/sass/pages/_home.scss
+++ b/src/main/resources/static/sass/pages/_home.scss
@@ -53,7 +53,7 @@
 
 .section-box {
     width: 80%;
-    margin: 3rem auto 1rem;
+    margin: auto;
     padding: 5rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 
@@ -65,23 +65,23 @@
 
 .section-profile {
     width: 95%;
-    margin: 3rem auto 1rem;
+    margin: auto;
     padding: 5rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 
     @include respond(tab-port) {
         padding: 3rem 0;
     }
+    &-edit {
+        width: 75%;
+        margin: 3rem auto 1rem;
+        padding: 5rem 0;
+        background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
 
-}
-.section-profile-edit {
-    width: 75%;
-    margin: 3rem auto 1rem;
-    padding: 5rem 0;
-    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+        @include respond(tab-port) {
+            padding: 3rem 0;
+        }
 
-    @include respond(tab-port) {
-        padding: 3rem 0;
     }
-
 }
+
